--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+  <header class="header">
+    <div class="container">
+      <h1 class="main-title">Not Fight Club</h1>
+    </div>
+  </header>
 
   <script type="module" src="./assets/js/main.js"></script>
 </body>
