feat: add welcome screen

--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
     </div>
   </header>
 
+  <section class="screen welcome-screen" id="welcome">
+    <div class="container">
+      <h2 class="scrn-title">Welcome!</h2>
+      <h3 class="scrn-subtitle welcome-screen-subtitle">
+        Think carefully before you enter,
+        for terrible trials and bloody battles await you, traveler.
+      </h3>
+      <button class="main-btn welcome-screen-button" id="start-btn">
+        Start
+      </button>
+    </div>
+  </section>
+
   <script type="module" src="./assets/js/main.js"></script>
 </body>
 
