feat: rebuild welcome screen to home

--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
     </div>
   </header>
 
-  <section class="screen welcome-screen" id="welcome">
+  <section class="screen home-screen" id="home">
     <div class="container">
-      <h2 class="scrn-title">Welcome!</h2>
-      <h3 class="scrn-subtitle welcome-screen-subtitle">
+      <h2 class="scrn-title">Welcome, <span id="player-name">User</span>!</h2>
+      <h3 class="scrn-subtitle home-screen-subtitle">
         Think carefully before you enter,
-        for terrible trials and bloody battles await you, traveler.
+        for terrible trials and bloody battles await you, warrior.
       </h3>
-      <button class="main-btn welcome-screen-button" id="start-btn">
-        Start
+      <button class="main-btn home-screen-button" id="start-btn">
+        <!-- Create Character -->
+        Fight!
       </button>
     </div>
   </section>
