feat: add wins and loses

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         </div>
         <img class="character-border-img" src="./assets/img/bg/hero-bg.webp" alt="Character-BG">
         <div class="character-info-wrapper">
-          <div class="character-wins">Wins: <span class="wins">0</span></div>
-          <div class="character-loses">Loses: <span class="loses">0</span></div>
+          <div class="character-wins">Wins: <span id="wins">0</span></div>
+          <div class="character-loses">Loses: <span id="loses">0</span></div>
         </div>
       </div>
       <div class="another-characters">
