feat: add settings screen

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div class="container">
       <h2 class="scrn-title">Create Your Character</h2>
       <input class="register-name" id="name" type="text" name="name" placeholder="Character Name">
-      <div class="register-info">From three to 15 characters</div>
-      <button class="main-btn register-btn" id="register-btn">Register</button>
+      <div class="register-info">From 2 to 15 characters</div>
+      <button class="main-btn register-btn" id="register-btn">Create Character</button>
     </div>
   </section>
 
@@ -73,6 +73,18 @@
           <img class="another-character-img" src="./assets/img/heroes/04-knight.webp" alt="Knight">
         </div>
       </div>
+    </div>
+  </section>
+
+  <section class="screen settings-screen hidden" id="settings" data-title="Settings">
+    <div class="container">
+      <h2 class="scrn-title">Player Name</h2>
+      <h3 class="scrn-subtitle settings-screen-subtitle">
+        You can change your name here.
+      </h3>
+      <input class="settings-name" id="change-name" type="text" name="change-name" placeholder="Player Name" value="">
+      <div class="settings-info">From 2 to 15 characters</div>
+      <button class="main-btn settings-btn" id="change-name-btn">Change Name</button>
     </div>
   </section>
 
