feat: add empty battle screen

--- a/index.html
+++ b/index.html
@@ -88,6 +88,16 @@
     </div>
   </section>
 
+  <section class="screen battle-screen " id="battle" data-title="Battle">
+    <div class="container">
+      <div class="battle-wrapper">
+        <div class="battle-hero-wrapper">
+
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script type="module" src="./assets/js/main.js"></script>
 </body>
 
